style(planet-page): fix desktop alignment and mobile sizes

--- a/src/pages/PlanetPage/PlanetPage.module.scss
+++ b/src/pages/PlanetPage/PlanetPage.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 100px 0px;
+    padding: 80px 0px;
     gap: 90px;
   }
 
@@ -46,7 +46,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 600px;
+    height: 550px;
     width: 100%;
     max-width: none;
     min-width: 0;
